better handling of cluster size; update swagger clients;
